@@ -108,6 +108,7 @@ with all sufficient information, see the ChangeLog file or Redmine
   * String#delete_suffix! is added to remove suffix destructively [Feature #13665]
   * String#each_grapheme_cluster and String#grapheme_clusters is added to
     enumerate grapheme clusters [Feature #13780]
+  * String#start_with? supports regexp [Feature #13712]
 
 * Regexp/String: Updated Unicode version from 9.0.0 to 10.0.0 [Feature #13685]
 
